--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@
 # React on Rails
 npm-debug.log
 node_modules
-client/npm-debug.log
+client/npm-debug.log*
 
 # Generated js bundles
 /app/assets/javascripts/generated/*
