--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -31,6 +31,7 @@ rules:
   react/jsx-curly-spacing: [1, never]
   react/jsx-no-duplicate-props: [2, { ignoreCase: true }]
   react/jsx-no-undef: 2
+  react/jsx-no-bind: 2
   react/jsx-sort-prop-types: 0
   react/jsx-sort-props: 0
   react/jsx-uses-react: 2
