--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-webpack-rails-tutorial",
-  "version": "1.1.1",
-  "description": "Built using the react_on_rails generator. Allows you to run npm install from root.",
+  "name": "graphql-relay-blog",
+  "version": "1.0.0",
+  "description": "A blog built on graphql and relay using react_on_rails gem",
   "main": "server.js",
   "engines": {
     "node": "4.2.0",
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/shakacode/react-webpack-rails-tutorial.git"
+    "url": "https://github.com/gauravtiwari/graphql-relay-blog-rails5"
   },
   "keywords": [
     "react",
@@ -26,8 +26,7 @@
   "author": "justin808",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/shakacode/react-webpack-rails-tutorial/issues"
+    "url": "https://github.com/gauravtiwari/graphql-relay-blog-rails5/issues"
   },
-  "homepage": "https://github.com/shakacode/react-webpack-rails-tutorial",
-  "dependencies": {}
+  "homepage": "https://github.com/gauravtiwari/graphql-relay-blog-rails5"
 }
